tests/snapshots/regression/semantic_types__type_classes__missing_instance_error.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/semantic_types/type_classes/missing_instance_error.flx
exit_code: 1

[ 1 of 17] Compiling  Assert
[ 2 of 17] Compiling  Debug
[ 3 of 17] Compiling  Array
[ 4 of 17] Compiling  List
[ 5 of 17] Compiling  Either
[ 6 of 17] Compiling  Eq
[ 7 of 17] Compiling  IO
[ 8 of 17] Compiling  Math
[ 9 of 17] Compiling  Num
[10 of 17] Compiling  Numeric
[11 of 17] Compiling  Option
[12 of 17] Compiling  Ord
[13 of 17] Compiling  Primops
[14 of 17] Compiling  Semigroup
[15 of 17] Compiling  Show
[16 of 17] Compiling  String
• 1 error • tests/fixtures/semantic_types/type_classes/missing_instance_error.flx
error[E444]: No Type Class Instance

No instance for `Sizeable<String>`.

  tests/fixtures/semantic_types/type_classes/missing_instance_error.flx:10:5
   |
10 |     size("flux")
   |     ^^^^^^^^^^^^

Hint:
  Add an instance: `instance Sizeable<String> { ... }`
